# octomato

./: README.md  pyproject.toml
tests/: test_octomato.py
